<resources>
    <string name="app_name">知乎日报(仿)</string>

    <!--splash-->
    <string name="app_slogan">每天三次,每次七分钟</string>

    <!--首页-->
    <string name="homepage_mainpage">首页</string>
    <string name="homepage_please_login">请登录</string>
    <string name="homepage_favorite">我的收藏</string>
    <string name="homepage_download">离线下载</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_message">消息</string>
    <string name="action_night_mode">夜间模式</string>
    <string name="action_settings">设置选项</string>


    <!--登录页面-->
    <string name="login_by_mb">使用微博登录</string>
    <string name="sina">新浪微博</string>
    <string name="tencent">腾讯微博</string>

    <!--新闻详情页ToolBar菜单-->
    <string name="menu_share">分享</string>
    <string name="menu_collect">收藏</string>
    <string name="menu_collected">已收藏</string>
    <string name="menu_comment">评论</string>
    <string name="menu_praise">点赞</string>
    <string name="menu_praised">已赞</string>

    <!--评论页面-->
    <string name="comments_count">%d条点评</string>



    <!--设置界面-->
    <string name="title_settings">设置</string>
    <string name="title_normal">常规</string>
    <string name="title_auto_load">自动离线下载</string>
    <string name="summary_auto_load">仅Wi-Fi下可用,自动下载最新内容</string>
    <string name="title_no_load_img">无图模式</string>
    <string name="summary_no_load_img">移动网络下不加载图片</string>
    <string name="title_big_font">大字号</string>
    <string name="title_other">其他</string>
    <string name="title_clear_cache">清除缓存</string>
    <string name="key_clear_cache">key_clear_cache</string>
    <string name="title_check_update">检查更新</string>
    <string name="key_check_update">key_check_update</string>
    <string name="summary_current_version">版本:1.0</string>
    <string name="title_about_me">关于我</string>
    <string name="key_about_me">key_about_me</string>
    <string name="title_feedback">反馈</string>
    <string name="title_advice">意见反馈</string>
    <string name="key_feedback">key_feedback</string>
    <string name="title_notice">声明</string>


    <string name="dialog_cancel">取消</string>
    <string name="toast_clear_cache">缓存已清除</string>

</resources>
