<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".module.detail.DetailActivity">

    <!--分享-->
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/share"
        android:title="@string/menu_share"
        app:showAsAction="always" />

    <!--收藏-->
    <item
        android:id="@+id/menu_collect"
        android:icon="@drawable/collect"
        android:title="@string/menu_collect"
        app:showAsAction="always" />

    <!--评论 android:icon="@drawable/comment"-->
    <item
        android:id="@+id/menu_comment"
        android:icon="@drawable/comment"
        android:title="@string/menu_comment"
        app:showAsAction="always|withText" />

    <!--赞-->
    <item
        android:id="@+id/menu_like"
        android:icon="@drawable/praise"
        android:title="@string/menu_praise"
        app:showAsAction="always|withText" />
</menu>
